# langchain_basics

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
chatbot/: main.py
examples/: 01_simple_chat.py  02_prompt_templates.py  03_chains.py  04_streaming.py
src/: agent_with_memory.py  agent_with_tools.py  agent_with_web_search.py  my_basic_agent.py  personal_chef_agent.py  weather_client.py  weather_server.py
